--- a/css/style.css
+++ b/css/style.css
@@ -168,18 +168,18 @@ body {
 }
 
 .slide1 {
-  background: url(/images/header/1.jpg) no-repeat;
+  background: url(../images/header/1.jpg) no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .slide2 {
-  background: url(/images/header/2.webp) no-repeat;
+  background: url(../images/header/2.webp) no-repeat;
   background-position: center;
   background-size: cover;
 }
 .slide3 {
-  background: url(/images/header/3.jpg) no-repeat;
+  background: url(../images/header/3.jpg) no-repeat;
   background-position: center;
   background-size: cover;
 }
