--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,84 @@ body {
 .menu-close--active {
   display: block;
 }
+
+.popup {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+.popup__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 500px;
+  height: 500px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 15px 110px 15px;
+  position: relative;
+}
+.popup__logo {
+  display: inline-block;
+  margin-bottom: 30px;
+}
+.popup__login-text {
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.popup__label-email {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.popup__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.popup__label-email::placeholder,
+.popup__label-password::placeholder {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 1.28857px;
+  color: #9e9e9e;
+}
+
+.popup__label-password {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.popup__btn {
+  background-color: var(--accent-color);
+  border: none;
+}
+.popup__btn:hover {
+  opacity: 0.6;
+}
+.popup--active {
+  display: block;
+}
 /* SLIDER END */
 
 /* HEADER */
