--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 30px;
+  max-width: 30px;
   height: 30px;
   border: none;
   background-color: transparent;
