fix lighthouse images errors

--- a/css/media.css
+++ b/css/media.css
@@ -72,6 +72,10 @@
   .free__info-box {
     margin: 20px;
   }
+  .free__img {
+    width: 526px;
+    height: 435px;
+  }
   .publish__info-box {
     margin: 20px;
   }
